# app/http/controller/admins/user.go
@@ -47,7 +47,7 @@ func UserList(c *gin.Context) {
 // @Description # 请求参数
 // @Param userName formData string false "用户名"
 // @Param password formData string false "密码"
-// @Success 200 {object} response.APISuccess "{"code":20000,"data":{},"message":"ok"}"
+// @Success 200 {object} response.Response "{"code":20000,"data":{},"message":"ok"}"
 // @Router /admin/v1/user/add [post]
 func AddUser(c *gin.Context) {
 	userName := c.PostForm("userName")
