# docs/swagger.yaml
@@ -75,7 +75,7 @@ paths:
       parameters:
       - description: 用户名
         in: formData
-        name: username
+        name: userName
         required: true
         type: string
       - description: 密码
@@ -139,6 +139,26 @@ paths:
       security:
       - bearer: []
       summary: 订单列表
+      tags:
+      - admin
+  /admin/v1/user/add:
+    post:
+      description: '# 请求参数'
+      parameters:
+      - description: 用户名
+        in: formData
+        name: userName
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: '{"code":20000,"data":{},"message":"ok"}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: 添加人员
       tags:
       - admin
   /admin/v1/user/list:
